疑似命令を展開するパスを追加

--- a/llvm/RX/CMakeLists.txt
+++ b/llvm/RX/CMakeLists.txt
@@ -14,6 +14,7 @@ add_public_tablegen_target(RXCommonTableGen)
 
 add_llvm_target(RXCodeGen
   RXAsmPrinter.cpp
+  RXExpandPseudoInsts.cpp
   RXFrameLowering.cpp
   RXISelDAGToDAG.cpp
   RXISelLowering.cpp
