--- a/llvm/RX/CMakeLists.txt
+++ b/llvm/RX/CMakeLists.txt
@@ -4,6 +4,7 @@ tablegen(LLVM RXGenAsmMatcher.inc -gen-asm-matcher)
 tablegen(LLVM RXGenAsmWriter.inc -gen-asm-writer)
 tablegen(LLVM RXGenCallingConv.inc -gen-callingconv)
 tablegen(LLVM RXGenDAGISel.inc -gen-dag-isel)
+tablegen(LLVM RXGenDisassemblerTables.inc -gen-disassembler)
 tablegen(LLVM RXGenGlobalISel.inc -gen-global-isel)
 tablegen(LLVM RXGenInstrInfo.inc -gen-instr-info)
 tablegen(LLVM RXGenMCPseudoLowering.inc -gen-pseudo-lowering)
