MCCodeEmitter.inc 生成追加

--- a/llvm/RX/CMakeLists.txt
+++ b/llvm/RX/CMakeLists.txt
@@ -7,6 +7,7 @@ tablegen(LLVM RXGenDAGISel.inc -gen-dag-isel)
 tablegen(LLVM RXGenDisassemblerTables.inc -gen-disassembler)
 tablegen(LLVM RXGenGlobalISel.inc -gen-global-isel)
 tablegen(LLVM RXGenInstrInfo.inc -gen-instr-info)
+tablegen(LLVM RXGenMCCodeEmitter.inc -gen-emitter)
 tablegen(LLVM RXGenMCPseudoLowering.inc -gen-pseudo-lowering)
 tablegen(LLVM RXGenRegisterInfo.inc -gen-register-info)
 tablegen(LLVM RXGenSubtargetInfo.inc -gen-subtarget)
