--- a/llvm/RX/MCTargetDesc/CMakeLists.txt
+++ b/llvm/RX/MCTargetDesc/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_llvm_library(LLVMRXDesc
+  RXAsmBackend.cpp
+  RXELFObjectWriter.cpp
   RXInstPrinter.cpp
   RXMCAsmInfo.cpp
+  RXMCCodeEmitter.cpp
   RXMCTargetDesc.cpp
   RXTargetStreamer.cpp
 )
