--- a/llvm/RX/MCTargetDesc/CMakeLists.txt
+++ b/llvm/RX/MCTargetDesc/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_llvm_library(LLVMRXDesc
+add_llvm_component_library(LLVMRXDesc
   RXAsmBackend.cpp
   RXELFObjectWriter.cpp
   RXInstPrinter.cpp
@@ -6,4 +6,12 @@ add_llvm_library(LLVMRXDesc
   RXMCCodeEmitter.cpp
   RXMCTargetDesc.cpp
   RXTargetStreamer.cpp
+
+  LINK_COMPONENTS
+  MC
+  RXInfo
+  Support
+
+  ADD_TO_COMPONENT
+  RX
 )
