--- a/llvm/RX/TargetInfo/CMakeLists.txt
+++ b/llvm/RX/TargetInfo/CMakeLists.txt
@@ -1,3 +1,9 @@
-add_llvm_library(LLVMRXInfo
+add_llvm_component_library(LLVMRXInfo
   RXTargetInfo.cpp
+
+  LINK_COMPONENTS
+  Support
+
+  ADD_TO_COMPONENT
+  RX
   )
